[package]
name = "with-axum-htmx-askama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1" 
axum = {version = "0.6.20",  features = ["headers", "multipart"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum_typed_multipart = "0.10.1"
serde_derive = "1.0.190"
serde_bencode = "0.2.4"
serde = "1.0.190"
serde_bytes = "0.11.12"
sha1 = "0.10.6"
hex = "0.4.3"
